--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.env.local
 
 # Spyder project settings
 .spyderproject
@@ -207,3 +208,4 @@ marimo/_lsp/
 __marimo__/
 local.md
 local/
+
